# Trading-Agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  etrade-agent-implementation-plan.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: secret-guard.sh
.claude/skills/adr-writing/: SKILL.md
.claude/skills/etrade-fixtures/: SKILL.md
.claude/skills/safety-wall/: SKILL.md
.claude/skills/sandbox-prod/: SKILL.md
.claude/skills/spec-compliance/: SKILL.md
.claude/skills/subagent-briefs/: SKILL.md
.github/workflows/: ci.yml
config/: config.example.toml
docs/: PHASE1-REPORT.md  PHASE2-REPORT.md  PHASE3-REPORT.md  PHASE4-REPORT.md  PHASE5-REPORT.md  SPEC.md
docs/decisions/: 0001-bootstrap-toolchain.md  0002-phase1-oauth-and-server-wiring.md  0003-phase2-safety-layer.md  0004-phase3-decision-pipeline.md  0005-phase4-orchestration.md  0006-phase5-observability.md  INDEX.md
docs/prompts/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
fixtures/etrade/: get_balances.default.2026-07-10.json  get_order_status.orderid-479.2026-07-10.json  get_positions.default.2026-07-10.json  get_quote.symbol-SPY.2026-07-10.json  place_order.EQ-BUY.2026-07-10.json  preview_order.EQ-BUY-market.2026-07-10.json
fixtures/pipeline/: fundamental_analyst.symbol-SPY.2026-07-11.json  news_analyst.symbol-SPY.2026-07-11.json  news_headlines.symbol-SPY.2026-07-11.json  risk_advisor.symbol-SPY.2026-07-11.json  technical_analyst.symbol-SPY.2026-07-11.json  trader.symbol-SPY.2026-07-11.json
launchd/: com.rishi.trading-agent.decision-run.plist.template
scripts/: generate_plist.py  generate_totp_secret.py  kill_switch.py  oauth_login.py  record_fixture.py  remote_listener.py  reset_breaker.py
src/etrade_agent/: __init__.py  config.py  logs.py  totp.py
src/etrade_agent/etrade/: __init__.py  client.py  models.py  oauth.py
src/etrade_agent/notify/: __init__.py  ntfy.py
src/etrade_agent/pipeline/: CLAUDE.md  __init__.py  llm.py  market.py  news.py  steps.py
src/etrade_agent/runner/: __init__.py  __main__.py  decision_run.py  headless.py  llm_client.py  status.py
src/etrade_agent/server/: CLAUDE.md  __init__.py  app.py  preview_store.py  safety.py  tools.py
src/etrade_agent/store/: __init__.py  db.py  schema.py  state.py
tests/: conftest.py
tests/etrade/: test_client_transport.py  test_models.py  test_oauth.py  test_parsers.py
tests/pipeline/: test_news.py  test_steps.py
tests/runner/: test_decision_run.py  test_headless.py  test_llm_client.py  test_main.py  test_status.py
tests/scripts/: test_generate_plist.py  test_generate_totp_secret.py  test_kill_switch.py  test_oauth_login.py  test_record_fixture.py  test_remote_listener.py  test_reset_breaker.py
tests/server/: test_app.py  test_preview_store.py  test_safety.py  test_safety_phase1.py  test_tools.py
tests/store/: test_db.py  test_state.py
tests/unit/: test_config.py  test_logs.py  test_models.py  test_totp.py
tests/wall/: conftest.py  test_caps_wall.py
tests/wall/phase1/: conftest.py  test_fixture_wall.py
tests/wall/phase3/: conftest.py  test_pipeline_wall.py
(+2 files in other folders)
